--- a/congee_2/mainwindow.ui
+++ b/congee_2/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1310</width>
+    <width>1274</width>
     <height>659</height>
    </rect>
   </property>
@@ -21,8 +21,8 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>-40</y>
-      <width>1291</width>
+      <y>0</y>
+      <width>1311</width>
       <height>761</height>
      </rect>
     </property>
@@ -36,8 +36,8 @@
      <widget class="QLabel" name="label_8">
       <property name="geometry">
        <rect>
-        <x>910</x>
-        <y>130</y>
+        <x>870</x>
+        <y>160</y>
         <width>151</width>
         <height>20</height>
        </rect>
@@ -53,8 +53,8 @@
      <widget class="QPushButton" name="pushButtonAjouter">
       <property name="geometry">
        <rect>
-        <x>1100</x>
-        <y>520</y>
+        <x>1060</x>
+        <y>490</y>
         <width>141</width>
         <height>41</height>
        </rect>
@@ -93,8 +93,8 @@ QPushButton:hover
      <widget class="QLabel" name="label_11">
       <property name="geometry">
        <rect>
-        <x>1030</x>
-        <y>310</y>
+        <x>1010</x>
+        <y>320</y>
         <width>101</width>
         <height>20</height>
        </rect>
@@ -110,8 +110,8 @@ QPushButton:hover
      <widget class="QLabel" name="label_2">
       <property name="geometry">
        <rect>
-        <x>1044</x>
-        <y>250</y>
+        <x>1010</x>
+        <y>270</y>
         <width>81</width>
         <height>20</height>
        </rect>
@@ -127,64 +127,47 @@ QPushButton:hover
      <widget class="QLineEdit" name="LeIdRT">
       <property name="geometry">
        <rect>
-        <x>890</x>
-        <y>160</y>
+        <x>870</x>
+        <y>190</y>
         <width>113</width>
         <height>22</height>
        </rect>
       </property>
-     </widget>
-     <widget class="QCalendarWidget" name="meetingsCalendar">
-      <property name="geometry">
-       <rect>
-        <x>30</x>
-        <y>200</y>
-        <width>311</width>
-        <height>231</height>
-       </rect>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="styleEdit">
-      <property name="enabled">
-       <bool>false</bool>
-      </property>
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>1291</width>
-        <height>71</height>
-       </rect>
-      </property>
       <property name="styleSheet">
-       <string notr="true">QPushButton{
-font-family: &quot;Roboto&quot;, sans-serif;
-    text-transform: uppercase;
-    outline: 0;
-    background: #2c3e50;
-    color: #FFFFFF;
-    width: 100%;
-    border: 0;
-    padding: 15px;
-    font-size: 14px;
-    -webkit-transition: all 0.3 ease;
-    transition: all 0.3 ease;
-    cursor: pointer;
-
-}
-QPushButton:hover
+       <string notr="true">QLineEdit
 {
+	background-color: #2c3e50;
+	color: #fcfcfc;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #1e4b6d;
 
-    background: #3498db;
+
 }
 
 
+QLineEdit::hover
+{
+	background-color: #2c3e50;
+	color: #fcfcfc;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #01dcff;
 
 
-</string>
-      </property>
-      <property name="text">
-       <string/>
+}
+
+
+QLineEdit::focus
+{
+	
+	color: #fcfcfc;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #01dcff;
+
+
+}</string>
       </property>
      </widget>
      <widget class="QPushButton" name="logo">
@@ -240,91 +223,11 @@ QPushButton:hover
        </size>
       </property>
      </widget>
-     <widget class="QPushButton" name="Statistiques">
-      <property name="geometry">
-       <rect>
-        <x>680</x>
-        <y>10</y>
-        <width>141</width>
-        <height>41</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QPushButton{
-font-family: &quot;Roboto&quot;, sans-serif;
-    text-transform: uppercase;
-    outline: 0;
-    background: #2c3e50;
-    color: #FFFFFF;
-    width: 100%;
-    border: 0;
-    padding: 15px;
-    font-size: 14px;
-    -webkit-transition: all 0.3 ease;
-    transition: all 0.3 ease;
-    cursor: pointer;
-
-}
-QPushButton:hover
-{
-
-    background: #3498db;
-}
-
-
-
-
-</string>
-      </property>
-      <property name="text">
-       <string>Statistiques</string>
-      </property>
-     </widget>
-     <widget class="QPushButton" name="calendrier">
-      <property name="geometry">
-       <rect>
-        <x>480</x>
-        <y>10</y>
-        <width>141</width>
-        <height>41</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">QPushButton{
-font-family: &quot;Roboto&quot;, sans-serif;
-    text-transform: uppercase;
-    outline: 0;
-    background: #2c3e50;
-    color: #FFFFFF;
-    width: 100%;
-    border: 0;
-    padding: 15px;
-    font-size: 14px;
-    -webkit-transition: all 0.3 ease;
-    transition: all 0.3 ease;
-    cursor: pointer;
-
-}
-QPushButton:hover
-{
-
-    background: #3498db;
-}
-
-
-
-
-</string>
-      </property>
-      <property name="text">
-       <string>Employee</string>
-      </property>
-     </widget>
      <widget class="QLabel" name="label_9">
       <property name="geometry">
        <rect>
-        <x>770</x>
-        <y>130</y>
+        <x>730</x>
+        <y>160</y>
         <width>131</width>
         <height>20</height>
        </rect>
@@ -340,18 +243,54 @@ QPushButton:hover
      <widget class="QLineEdit" name="LeTitreRT">
       <property name="geometry">
        <rect>
-        <x>760</x>
-        <y>160</y>
+        <x>730</x>
+        <y>190</y>
         <width>113</width>
         <height>22</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QLineEdit
+{
+	background-color: #2c3e50;
+	color: #fcfcfc;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #1e4b6d;
+
+
+}
+
+
+QLineEdit::hover
+{
+	background-color: #2c3e50;
+	color: #fcfcfc;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #01dcff;
+
+
+}
+
+
+QLineEdit::focus
+{
+	
+	color: #fcfcfc;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #01dcff;
+
+
+}</string>
       </property>
      </widget>
      <widget class="QPushButton" name="pushButton_2">
       <property name="geometry">
        <rect>
-        <x>590</x>
-        <y>150</y>
+        <x>560</x>
+        <y>170</y>
         <width>141</width>
         <height>41</height>
        </rect>
@@ -390,8 +329,8 @@ QPushButton:hover
      <widget class="QPushButton" name="pushButton">
       <property name="geometry">
        <rect>
-        <x>430</x>
-        <y>150</y>
+        <x>390</x>
+        <y>170</y>
         <width>141</width>
         <height>41</height>
        </rect>
@@ -430,28 +369,75 @@ QPushButton:hover
      <widget class="QLineEdit" name="LeId">
       <property name="geometry">
        <rect>
-        <x>1140</x>
-        <y>250</y>
+        <x>1120</x>
+        <y>270</y>
         <width>113</width>
         <height>22</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QLineEdit
+{
+	background-color: #2c3e50;
+	color: #fcfcfc;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #1e4b6d;
+
+
+}
+
+
+QLineEdit::hover
+{
+	background-color: #2c3e50;
+	color: #fcfcfc;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #01dcff;
+
+
+}
+
+
+QLineEdit::focus
+{
+	
+	color: #fcfcfc;
+	border-style: solid;
+	border-width: 2px;
+	border-color: #01dcff;
+
+
+}</string>
       </property>
      </widget>
      <widget class="QDateEdit" name="dateEdit">
       <property name="geometry">
        <rect>
-        <x>1140</x>
-        <y>310</y>
+        <x>1120</x>
+        <y>320</y>
         <width>111</width>
         <height>21</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QDateEdit
+{
+    background-color: qlineargradient(spread:repeat, x1:1, y1:0, x2:1, y2:1, stop:0 rgba(44, 62, 80, 255),stop:1 rgba(3, 2, 5, 255));
+    padding-left: 6px;
+	border: 1px solid #1d1d1d;
+    color: #fff;
+    height: 20px;
+
+}</string>
       </property>
      </widget>
      <widget class="QTableView" name="tableView">
       <property name="geometry">
        <rect>
-        <x>380</x>
-        <y>210</y>
+        <x>330</x>
+        <y>240</y>
         <width>631</width>
         <height>231</height>
        </rect>
@@ -485,18 +471,29 @@ QHeaderView::section:vertical
      <widget class="QDateEdit" name="dateEdit_2">
       <property name="geometry">
        <rect>
-        <x>1140</x>
-        <y>360</y>
+        <x>1120</x>
+        <y>370</y>
         <width>111</width>
         <height>21</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QDateEdit
+{
+    background-color: qlineargradient(spread:repeat, x1:1, y1:0, x2:1, y2:1, stop:0 rgba(44, 65, 80, 255),stop:1 rgba(3, 2, 5, 255));
+    padding-left: 6px;
+	border: 1px solid #1d1d1d;
+    color: #fff;
+    height: 20px;
+
+}</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_12">
       <property name="geometry">
        <rect>
-        <x>1040</x>
-        <y>360</y>
+        <x>1010</x>
+        <y>370</y>
         <width>101</width>
         <height>20</height>
        </rect>
@@ -592,11 +589,15 @@ QPushButton:hover
      <widget class="QLabel" name="label">
       <property name="geometry">
        <rect>
-        <x>1040</x>
-        <y>400</y>
+        <x>1010</x>
+        <y>410</y>
         <width>131</width>
         <height>41</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: #000000;
+  font-size: 16px;</string>
       </property>
       <property name="text">
        <string>CIN_Emp</string>
@@ -605,13 +606,253 @@ QPushButton:hover
      <widget class="QComboBox" name="comboBox">
       <property name="geometry">
        <rect>
-        <x>1140</x>
-        <y>410</y>
+        <x>1120</x>
+        <y>420</y>
         <width>111</width>
         <height>22</height>
        </rect>
       </property>
+      <property name="styleSheet">
+       <string notr="true">QComboBox
+{
+    background-color: qlineargradient(spread:repeat, x1:1, y1:0, x2:1, y2:1, stop:0 rgba(44,62, 80, 255),stop:1 rgba(3, 2, 5, 255));
+    padding-left: 6px;
+	border: 1px solid #1d1d1d;
+    color: #fff;
+    height: 20px;
+
+}
+
+
+QComboBox::disabled
+{
+	background-color: #404040;
+	color: #656565;
+	border-color: #051a39;
+
+}
+
+
+QComboBox:on
+{
+    background-color: #4a5157;
+	color: #fff;
+
+}
+
+
+QComboBox QAbstractItemView
+{
+    background-color: #e8d9d7;
+    color: #000;
+    selection-background-color: #aa7e82;
+	selection-color: #fff;
+    outline: 0;
+
+}
+
+
+QComboBox::drop-down
+{
+	background-color: #4a5157;
+    subcontrol-origin: padding;
+    subcontrol-position: top right;
+    width: 15px;
+
+}
+
+
+QComboBox::down-arrow
+{
+    image: url(://arrow-down.png);
+    width: 8px;
+    height: 8px;
+
+}
+</string>
+      </property>
      </widget>
+     <widget class="QPushButton" name="conge">
+      <property name="geometry">
+       <rect>
+        <x>420</x>
+        <y>20</y>
+        <width>141</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton{
+font-family: &quot;Roboto&quot;, sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background: #2c3e50;
+    color: #FFFFFF;
+    width: 100%;
+    border: 0;
+    padding: 15px;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+
+}
+QPushButton:hover
+{
+
+    background: #3498db;
+}
+
+
+
+
+</string>
+      </property>
+      <property name="text">
+       <string>conge</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="employee">
+      <property name="geometry">
+       <rect>
+        <x>600</x>
+        <y>20</y>
+        <width>141</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton{
+font-family: &quot;Roboto&quot;, sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background: #2c3e50;
+    color: #FFFFFF;
+    width: 100%;
+    border: 0;
+    padding: 15px;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+
+}
+QPushButton:hover
+{
+
+    background: #3498db;
+}
+
+
+
+
+</string>
+      </property>
+      <property name="text">
+       <string>Employee</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="Statistiques_3">
+      <property name="geometry">
+       <rect>
+        <x>780</x>
+        <y>20</y>
+        <width>141</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton{
+font-family: &quot;Roboto&quot;, sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background: #2c3e50;
+    color: #FFFFFF;
+    width: 100%;
+    border: 0;
+    padding: 15px;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+
+}
+QPushButton:hover
+{
+
+    background: #3498db;
+}
+
+
+
+
+</string>
+      </property>
+      <property name="text">
+       <string>Statistiques</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_3">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>20</y>
+        <width>1251</width>
+        <height>641</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">
+border-image: url(:/img/policeman-background_48369-15139.jpg) 1 1 1 1 stretch stretch;</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="styleEdit">
+      <property name="enabled">
+       <bool>false</bool>
+      </property>
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>0</y>
+        <width>1251</width>
+        <height>81</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton{
+font-family: &quot;Roboto&quot;, sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background: #2c3e50;
+    color: #FFFFFF;
+    width: 100%;
+    border: 0;
+    padding: 15px;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+
+}
+QPushButton:hover
+{
+
+    background: #3498db;
+}
+
+
+
+
+</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+     <zorder>label_3</zorder>
      <zorder>styleEdit</zorder>
      <zorder>logo</zorder>
      <zorder>label_8</zorder>
@@ -619,9 +860,6 @@ QPushButton:hover
      <zorder>label_11</zorder>
      <zorder>label_2</zorder>
      <zorder>LeIdRT</zorder>
-     <zorder>meetingsCalendar</zorder>
-     <zorder>Statistiques</zorder>
-     <zorder>calendrier</zorder>
      <zorder>label_9</zorder>
      <zorder>LeTitreRT</zorder>
      <zorder>pushButton_2</zorder>
@@ -635,6 +873,9 @@ QPushButton:hover
      <zorder>pushButtonSupprimer</zorder>
      <zorder>label</zorder>
      <zorder>comboBox</zorder>
+     <zorder>conge</zorder>
+     <zorder>employee</zorder>
+     <zorder>Statistiques_3</zorder>
     </widget>
     <widget class="QWidget" name="page_2">
      <widget class="QPushButton" name="Statistiques_2">
