--- a/dialogconge.ui
+++ b/dialogconge.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialoghistorique</class>
- <widget class="QDialog" name="Dialoghistorique">
+ <class>Dialogconge</class>
+ <widget class="QDialog" name="Dialogconge">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Gestion des hitoriques</string>
+   <string>Gestion des conges</string>
   </property>
   <widget class="QStackedWidget" name="dateEdit_3">
    <property name="geometry">
@@ -33,7 +33,7 @@
      <property name="geometry">
       <rect>
        <x>30</x>
-       <y>420</y>
+       <y>310</y>
        <width>211</width>
        <height>20</height>
       </rect>
@@ -49,8 +49,8 @@
     <widget class="QPushButton" name="pushButtonAjouter">
      <property name="geometry">
       <rect>
-       <x>1060</x>
-       <y>490</y>
+       <x>1070</x>
+       <y>450</y>
        <width>141</width>
        <height>41</height>
       </rect>
@@ -85,12 +85,16 @@ QPushButton:hover
      <property name="text">
       <string>Ajouter</string>
      </property>
+     <property name="icon">
+      <iconset resource="image.qrc">
+       <normaloff>:/img/images.png</normaloff>:/img/images.png</iconset>
+     </property>
     </widget>
     <widget class="QLabel" name="label_13">
      <property name="geometry">
       <rect>
        <x>1010</x>
-       <y>320</y>
+       <y>280</y>
        <width>101</width>
        <height>20</height>
       </rect>
@@ -107,7 +111,7 @@ QPushButton:hover
      <property name="geometry">
       <rect>
        <x>1010</x>
-       <y>270</y>
+       <y>230</y>
        <width>81</width>
        <height>20</height>
       </rect>
@@ -123,8 +127,8 @@ QPushButton:hover
     <widget class="QLineEdit" name="LeIdRT">
      <property name="geometry">
       <rect>
-       <x>150</x>
-       <y>450</y>
+       <x>40</x>
+       <y>250</y>
        <width>161</width>
        <height>31</height>
       </rect>
@@ -223,7 +227,7 @@ QPushButton:hover
      <property name="geometry">
       <rect>
        <x>30</x>
-       <y>330</y>
+       <y>210</y>
        <width>181</width>
        <height>20</height>
       </rect>
@@ -239,8 +243,8 @@ QPushButton:hover
     <widget class="QLineEdit" name="LeTitreRT">
      <property name="geometry">
       <rect>
-       <x>150</x>
-       <y>360</y>
+       <x>40</x>
+       <y>350</y>
        <width>161</width>
        <height>31</height>
       </rect>
@@ -285,9 +289,9 @@ QLineEdit::focus
     <widget class="QPushButton" name="pushButton_2">
      <property name="geometry">
       <rect>
-       <x>800</x>
-       <y>130</y>
-       <width>141</width>
+       <x>590</x>
+       <y>120</y>
+       <width>171</width>
        <height>41</height>
       </rect>
      </property>
@@ -319,15 +323,15 @@ QPushButton:hover
 </string>
      </property>
      <property name="text">
-      <string>Tri PAR DATE</string>
+      <string>Tri PAR cin employe</string>
      </property>
     </widget>
     <widget class="QPushButton" name="pushButton">
      <property name="geometry">
       <rect>
-       <x>600</x>
-       <y>130</y>
-       <width>141</width>
+       <x>390</x>
+       <y>120</y>
+       <width>151</width>
        <height>41</height>
       </rect>
      </property>
@@ -359,14 +363,14 @@ QPushButton:hover
 </string>
      </property>
      <property name="text">
-      <string>Tri PAR ID</string>
+      <string>Tri PAR ID conge</string>
      </property>
     </widget>
     <widget class="QLineEdit" name="LeId_2">
      <property name="geometry">
       <rect>
        <x>1120</x>
-       <y>270</y>
+       <y>230</y>
        <width>113</width>
        <height>22</height>
       </rect>
@@ -412,7 +416,7 @@ QLineEdit::focus
      <property name="geometry">
       <rect>
        <x>1120</x>
-       <y>320</y>
+       <y>280</y>
        <width>111</width>
        <height>21</height>
       </rect>
@@ -433,7 +437,7 @@ QLineEdit::focus
      <property name="geometry">
       <rect>
        <x>390</x>
-       <y>200</y>
+       <y>190</y>
        <width>571</width>
        <height>231</height>
       </rect>
@@ -468,7 +472,7 @@ QHeaderView::section:vertical
      <property name="geometry">
       <rect>
        <x>1120</x>
-       <y>370</y>
+       <y>330</y>
        <width>111</width>
        <height>21</height>
       </rect>
@@ -489,7 +493,7 @@ QHeaderView::section:vertical
      <property name="geometry">
       <rect>
        <x>1010</x>
-       <y>370</y>
+       <y>330</y>
        <width>101</width>
        <height>20</height>
       </rect>
@@ -505,8 +509,8 @@ QHeaderView::section:vertical
     <widget class="QPushButton" name="pushButtonModifier">
      <property name="geometry">
       <rect>
-       <x>640</x>
-       <y>500</y>
+       <x>610</x>
+       <y>440</y>
        <width>141</width>
        <height>41</height>
       </rect>
@@ -541,12 +545,16 @@ QPushButton:hover
      <property name="text">
       <string>Modifier</string>
      </property>
+     <property name="icon">
+      <iconset resource="image.qrc">
+       <normaloff>:/Downloads/administrative-tools.png</normaloff>:/Downloads/administrative-tools.png</iconset>
+     </property>
     </widget>
     <widget class="QPushButton" name="pushButtonSupprimer">
      <property name="geometry">
       <rect>
-       <x>830</x>
-       <y>500</y>
+       <x>810</x>
+       <y>440</y>
        <width>141</width>
        <height>41</height>
       </rect>
@@ -581,12 +589,16 @@ QPushButton:hover
      <property name="text">
       <string>Supprimer</string>
      </property>
+     <property name="icon">
+      <iconset resource="image.qrc">
+       <normaloff>:/Downloads/delete-forever.png</normaloff>:/Downloads/delete-forever.png</iconset>
+     </property>
     </widget>
     <widget class="QLabel" name="label_16">
      <property name="geometry">
       <rect>
        <x>1010</x>
-       <y>410</y>
+       <y>370</y>
        <width>131</width>
        <height>41</height>
       </rect>
@@ -603,7 +615,7 @@ QPushButton:hover
      <property name="geometry">
       <rect>
        <x>1120</x>
-       <y>420</y>
+       <y>380</y>
        <width>111</width>
        <height>22</height>
       </rect>
@@ -714,9 +726,9 @@ QPushButton:hover
     <widget class="QPushButton" name="pushButton_3">
      <property name="geometry">
       <rect>
-       <x>390</x>
-       <y>130</y>
-       <width>141</width>
+       <x>810</x>
+       <y>120</y>
+       <width>151</width>
        <height>41</height>
       </rect>
      </property>
@@ -754,8 +766,8 @@ QPushButton:hover
     <widget class="QPushButton" name="pushButton_7">
      <property name="geometry">
       <rect>
-       <x>30</x>
-       <y>90</y>
+       <x>40</x>
+       <y>80</y>
        <width>121</width>
        <height>41</height>
       </rect>
@@ -810,8 +822,8 @@ QPushButton:hover
     <widget class="QLabel" name="label_2">
      <property name="geometry">
       <rect>
-       <x>1130</x>
-       <y>80</y>
+       <x>1160</x>
+       <y>60</y>
        <width>101</width>
        <height>91</height>
       </rect>
@@ -1072,6 +1084,8 @@ QPushButton:hover
    <widget class="QWidget" name="page_3"/>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="image.qrc"/>
+ </resources>
  <connections/>
 </ui>
