--- a/dialogemploye.ui
+++ b/dialogemploye.ui
@@ -34,7 +34,7 @@
 </string>
    </property>
    <property name="currentIndex">
-    <number>0</number>
+    <number>1</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -131,6 +131,10 @@ QPushButton:hover
        </property>
        <property name="text">
         <string>Ajouter</string>
+       </property>
+       <property name="icon">
+        <iconset resource="image.qrc">
+         <normaloff>:/img/images.png</normaloff>:/img/images.png</iconset>
        </property>
       </widget>
       <widget class="QLabel" name="label_11">
@@ -710,7 +714,7 @@ QLineEdit::focus
        <property name="geometry">
         <rect>
          <x>620</x>
-         <y>140</y>
+         <y>110</y>
          <width>141</width>
          <height>41</height>
         </rect>
@@ -750,7 +754,7 @@ QPushButton:hover
        <property name="geometry">
         <rect>
          <x>840</x>
-         <y>140</y>
+         <y>110</y>
          <width>141</width>
          <height>41</height>
         </rect>
@@ -881,7 +885,7 @@ QLineEdit::focus
        <property name="geometry">
         <rect>
          <x>390</x>
-         <y>200</y>
+         <y>170</y>
          <width>611</width>
          <height>251</height>
         </rect>
@@ -915,8 +919,8 @@ QHeaderView::section:vertical
       <widget class="QPushButton" name="pushButtonSupprimer">
        <property name="geometry">
         <rect>
-         <x>750</x>
-         <y>480</y>
+         <x>820</x>
+         <y>450</y>
          <width>171</width>
          <height>41</height>
         </rect>
@@ -951,12 +955,16 @@ QPushButton:hover
        <property name="text">
         <string>Supprimer</string>
        </property>
+       <property name="icon">
+        <iconset resource="image.qrc">
+         <normaloff>:/Downloads/delete-forever.png</normaloff>:/Downloads/delete-forever.png</iconset>
+       </property>
       </widget>
       <widget class="QPushButton" name="pushButtonModifier">
        <property name="geometry">
         <rect>
-         <x>560</x>
-         <y>480</y>
+         <x>600</x>
+         <y>450</y>
          <width>171</width>
          <height>41</height>
         </rect>
@@ -991,12 +999,16 @@ QPushButton:hover
        <property name="text">
         <string>Modifier</string>
        </property>
+       <property name="icon">
+        <iconset resource="image.qrc">
+         <normaloff>:/Downloads/administrative-tools.png</normaloff>:/Downloads/administrative-tools.png</iconset>
+       </property>
       </widget>
       <widget class="QPushButton" name="pushButton_3">
        <property name="geometry">
         <rect>
          <x>410</x>
-         <y>140</y>
+         <y>110</y>
          <width>141</width>
          <height>41</height>
         </rect>
@@ -1138,8 +1150,8 @@ QPushButton:hover
       <widget class="QLabel" name="label">
        <property name="geometry">
         <rect>
-         <x>1180</x>
-         <y>70</y>
+         <x>1170</x>
+         <y>60</y>
          <width>101</width>
          <height>91</height>
         </rect>
@@ -1465,8 +1477,8 @@ QPushButton:hover
     <widget class="QLabel" name="label_14">
      <property name="geometry">
       <rect>
-       <x>20</x>
-       <y>50</y>
+       <x>30</x>
+       <y>60</y>
        <width>101</width>
        <height>91</height>
       </rect>
@@ -1486,6 +1498,8 @@ QPushButton:hover
    </widget>
   </widget>
  </widget>
- <resources/>
+ <resources>
+  <include location="image.qrc"/>
+ </resources>
  <connections/>
 </ui>
