--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,10 +17,10 @@
    <widget class="QPushButton" name="pushButtonEmploye">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>270</y>
-      <width>341</width>
-      <height>91</height>
+      <x>590</x>
+      <y>350</y>
+      <width>291</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -49,39 +49,13 @@ QPushButton:hover
      <string>Gestion des Employés</string>
     </property>
    </widget>
-   <widget class="QGroupBox" name="groupBox">
-    <property name="geometry">
-     <rect>
-      <x>710</x>
-      <y>50</y>
-      <width>281</width>
-      <height>141</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(177, 177, 177);
-  border: none;
-  color: black;
-  padding: 20px;
-  text-align: center;
-  text-decoration: none;
-font-family:calibri;
-  display: inline-block;
-  font-size: 20px;
-  margin: 4px 2px;
-  border-radius : 16px;</string>
-    </property>
-    <property name="title">
-     <string/>
-    </property>
-   </widget>
    <widget class="QPushButton" name="pushButtonHistorique">
     <property name="geometry">
      <rect>
-      <x>670</x>
-      <y>390</y>
-      <width>341</width>
-      <height>91</height>
+      <x>860</x>
+      <y>260</y>
+      <width>281</width>
+      <height>61</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -107,16 +81,16 @@ QPushButton:hover
 }</string>
     </property>
     <property name="text">
-     <string>Gestion des Historiques</string>
+     <string>Gestion des congés</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pause_2">
     <property name="geometry">
      <rect>
-      <x>530</x>
-      <y>180</y>
-      <width>111</width>
-      <height>61</height>
+      <x>1040</x>
+      <y>130</y>
+      <width>91</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -148,10 +122,10 @@ QPushButton:hover
    <widget class="QPushButton" name="start_2">
     <property name="geometry">
      <rect>
-      <x>450</x>
-      <y>70</y>
-      <width>111</width>
-      <height>61</height>
+      <x>930</x>
+      <y>130</y>
+      <width>91</width>
+      <height>41</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -183,16 +157,132 @@ QPushButton:hover
    <widget class="QSlider" name="horizontalSlider_2">
     <property name="geometry">
      <rect>
-      <x>400</x>
-      <y>270</y>
+      <x>950</x>
+      <y>90</y>
       <width>160</width>
       <height>22</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QSlider::groove:horizontal {
+border: 1px solid #bbb;
+background: white;
+height: 10px;
+border-radius: 4px;
+}
+
+QSlider::sub-page:horizontal {
+background: qlineargradient(x1: 0, y1: 0,    x2: 0, y2: 1,
+    stop: 0 #66e, stop: 1 #bbf);
+background: qlineargradient(x1: 0, y1: 0.2, x2: 1, y2: 1,
+    stop: 0 #bbf, stop: 1 #55f);
+border: 1px solid #777;
+height: 10px;
+border-radius: 4px;
+}
+
+QSlider::add-page:horizontal {
+background: #fff;
+border: 1px solid #777;
+height: 10px;
+border-radius: 4px;
+}
+
+QSlider::handle:horizontal {
+background: qlineargradient(x1:0, y1:0, x2:1, y2:1,
+    stop:0 #eee, stop:1 #ccc);
+border: 1px solid #777;
+width: 13px;
+margin-top: -2px;
+margin-bottom: -2px;
+border-radius: 4px;
+}
+
+QSlider::handle:horizontal:hover {
+background: qlineargradient(x1:0, y1:0, x2:1, y2:1,
+    stop:0 #fff, stop:1 #ddd);
+border: 1px solid #444;
+border-radius: 4px;
+}
+
+QSlider::sub-page:horizontal:disabled {
+background: #bbb;
+border-color: #999;
+}
+
+QSlider::add-page:horizontal:disabled {
+background: #eee;
+border-color: #999;
+}
+
+QSlider::handle:horizontal:disabled {
+background: #eee;
+border: 1px solid #aaa;
+border-radius: 4px;
+}</string>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
     </property>
    </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>-60</y>
+      <width>1161</width>
+      <height>571</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/img/policeman-background_48369-15139.jpg) 1 1 1 1 stretch stretch;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>1080</x>
+      <y>30</y>
+      <width>81</width>
+      <height>61</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/img/pngtree-vector-high-volume-icon-png-image_313059.png) 1 1 1 1 stretch stretch ,  transparent;
+
+	</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_3">
+    <property name="geometry">
+     <rect>
+      <x>810</x>
+      <y>30</y>
+      <width>131</width>
+      <height>121</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/img/151063767_429005728336484_2086052602840462546_n.png) 1 1 1 1 stretch stretch ,  transparent;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
+   <zorder>label</zorder>
+   <zorder>pushButtonEmploye</zorder>
+   <zorder>pushButtonHistorique</zorder>
+   <zorder>pause_2</zorder>
+   <zorder>start_2</zorder>
+   <zorder>horizontalSlider_2</zorder>
+   <zorder>label_2</zorder>
+   <zorder>label_3</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
