--- a/dialogemploye.ui
+++ b/dialogemploye.ui
@@ -34,7 +34,7 @@
 </string>
    </property>
    <property name="currentIndex">
-    <number>1</number>
+    <number>0</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -135,6 +135,12 @@ QPushButton:hover
        <property name="icon">
         <iconset resource="image.qrc">
          <normaloff>:/img/images.png</normaloff>:/img/images.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>40</width>
+         <height>40</height>
+        </size>
        </property>
       </widget>
       <widget class="QLabel" name="label_11">
@@ -959,6 +965,12 @@ QPushButton:hover
         <iconset resource="image.qrc">
          <normaloff>:/Downloads/delete-forever.png</normaloff>:/Downloads/delete-forever.png</iconset>
        </property>
+       <property name="iconSize">
+        <size>
+         <width>40</width>
+         <height>40</height>
+        </size>
+       </property>
       </widget>
       <widget class="QPushButton" name="pushButtonModifier">
        <property name="geometry">
@@ -1002,6 +1014,12 @@ QPushButton:hover
        <property name="icon">
         <iconset resource="image.qrc">
          <normaloff>:/Downloads/administrative-tools.png</normaloff>:/Downloads/administrative-tools.png</iconset>
+       </property>
+       <property name="iconSize">
+        <size>
+         <width>40</width>
+         <height>40</height>
+        </size>
        </property>
       </widget>
       <widget class="QPushButton" name="pushButton_3">
@@ -1153,7 +1171,7 @@ QPushButton:hover
          <x>1170</x>
          <y>60</y>
          <width>101</width>
-         <height>91</height>
+         <height>101</height>
         </rect>
        </property>
        <property name="styleSheet">
