--- a/image.qrc
+++ b/image.qrc
@@ -8,5 +8,8 @@
         <file>img/images.png</file>
         <file>img/pngtree-vector-high-volume-icon-png-image_313059.jpg</file>
         <file>img/pngtree-vector-high-volume-icon-png-image_313059.png</file>
+        <file>img/player-navigation-icons-play-stop-and-pause-vector-.png</file>
+        <file>img/player-navigation-icons-play-stop-and-pause-vector-5509880.png</file>
+        <file>img/music-player-1446499-1222214.png</file>
     </qresource>
 </RCC>
