--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,9 +17,9 @@
    <widget class="QPushButton" name="pushButtonEmploye">
     <property name="geometry">
      <rect>
-      <x>590</x>
-      <y>350</y>
-      <width>291</width>
+      <x>890</x>
+      <y>330</y>
+      <width>261</width>
       <height>61</height>
      </rect>
     </property>
@@ -52,9 +52,9 @@ QPushButton:hover
    <widget class="QPushButton" name="pushButtonHistorique">
     <property name="geometry">
      <rect>
-      <x>860</x>
-      <y>260</y>
-      <width>281</width>
+      <x>580</x>
+      <y>330</y>
+      <width>261</width>
       <height>61</height>
      </rect>
     </property>
@@ -87,8 +87,8 @@ QPushButton:hover
    <widget class="QPushButton" name="pause_2">
     <property name="geometry">
      <rect>
-      <x>1040</x>
-      <y>130</y>
+      <x>830</x>
+      <y>220</y>
       <width>91</width>
       <height>41</height>
      </rect>
@@ -98,7 +98,7 @@ QPushButton:hover
 font-family: &quot;Roboto&quot;, sans-serif;
     text-transform: uppercase;
     outline: 0;
-    background: #2c3e50;
+    background: transparent;
     color: #FFFFFF;
     width: 100%;
     border: 0;
@@ -109,21 +109,27 @@ font-family: &quot;Roboto&quot;, sans-serif;
     cursor: pointer;
 
 }
-QPushButton:hover
-{
-
-    background: #3498db;
-}</string>
+</string>
     </property>
     <property name="text">
-     <string>Pause</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="image.qrc">
+      <normaloff>:/img/player-navigation-icons-play-stop-and-pause-vector-.png</normaloff>:/img/player-navigation-icons-play-stop-and-pause-vector-.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>100</width>
+      <height>100</height>
+     </size>
     </property>
    </widget>
    <widget class="QPushButton" name="start_2">
     <property name="geometry">
      <rect>
-      <x>930</x>
-      <y>130</y>
+      <x>880</x>
+      <y>220</y>
       <width>91</width>
       <height>41</height>
      </rect>
@@ -133,7 +139,7 @@ QPushButton:hover
 font-family: &quot;Roboto&quot;, sans-serif;
     text-transform: uppercase;
     outline: 0;
-    background: #2c3e50;
+    background: transparent;
     color: #FFFFFF;
     width: 100%;
     border: 0;
@@ -144,21 +150,27 @@ font-family: &quot;Roboto&quot;, sans-serif;
     cursor: pointer;
 
 }
-QPushButton:hover
-{
-
-    background: #3498db;
-}</string>
+</string>
     </property>
     <property name="text">
-     <string>Start</string>
+     <string/>
+    </property>
+    <property name="icon">
+     <iconset resource="image.qrc">
+      <normaloff>:/img/player-navigation-icons-play-stop-and-pause-vector-5509880.png</normaloff>:/img/player-navigation-icons-play-stop-and-pause-vector-5509880.png</iconset>
+    </property>
+    <property name="iconSize">
+     <size>
+      <width>100</width>
+      <height>100</height>
+     </size>
     </property>
    </widget>
    <widget class="QSlider" name="horizontalSlider_2">
     <property name="geometry">
      <rect>
-      <x>950</x>
-      <y>90</y>
+      <x>960</x>
+      <y>230</y>
       <width>160</width>
       <height>22</height>
      </rect>
@@ -241,31 +253,13 @@ border-radius: 4px;
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>1080</x>
-      <y>30</y>
-      <width>81</width>
-      <height>61</height>
-     </rect>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">border-image: url(:/img/pngtree-vector-high-volume-icon-png-image_313059.png) 1 1 1 1 stretch stretch ,  transparent;
-
-	</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_3">
     <property name="geometry">
      <rect>
-      <x>810</x>
+      <x>890</x>
       <y>30</y>
-      <width>131</width>
-      <height>121</height>
+      <width>191</width>
+      <height>191</height>
      </rect>
     </property>
     <property name="styleSheet">
@@ -275,13 +269,29 @@ border-radius: 4px;
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="label_4">
+    <property name="geometry">
+     <rect>
+      <x>830</x>
+      <y>-40</y>
+      <width>321</width>
+      <height>371</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-image: url(:/img/music-player-1446499-1222214.png) 1 1 1 1 stretch stretch ,  transparent;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+   </widget>
    <zorder>label</zorder>
+   <zorder>label_4</zorder>
    <zorder>pushButtonEmploye</zorder>
    <zorder>pushButtonHistorique</zorder>
    <zorder>pause_2</zorder>
    <zorder>start_2</zorder>
    <zorder>horizontalSlider_2</zorder>
-   <zorder>label_2</zorder>
    <zorder>label_3</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
@@ -305,6 +315,8 @@ border-radius: 4px;
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
- <resources/>
+ <resources>
+  <include location="image.qrc"/>
+ </resources>
  <connections/>
 </ui>
