--- a/image.qrc
+++ b/image.qrc
@@ -3,13 +3,13 @@
         <file>img/151063767_429005728336484_2086052602840462546_n.png</file>
         <file>img/african-american-policeman-writing-report-wearing-uniform-cop-guard-JKJG2T.jpg</file>
         <file>img/policeman-background_48369-15139.jpg</file>
-        <file>../../Downloads/delete-forever.png</file>
-        <file>../../Downloads/administrative-tools.png</file>
         <file>img/images.png</file>
         <file>img/pngtree-vector-high-volume-icon-png-image_313059.jpg</file>
         <file>img/pngtree-vector-high-volume-icon-png-image_313059.png</file>
         <file>img/player-navigation-icons-play-stop-and-pause-vector-.png</file>
         <file>img/player-navigation-icons-play-stop-and-pause-vector-5509880.png</file>
         <file>img/music-player-1446499-1222214.png</file>
+        <file>img/administrative-tools.png</file>
+        <file>img/delete-forever.png</file>
     </qresource>
 </RCC>
