--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -285,6 +285,41 @@ border-radius: 4px;
      <string/>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButtonquitter">
+    <property name="geometry">
+     <rect>
+      <x>40</x>
+      <y>20</y>
+      <width>111</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton{
+font-family: &quot;Roboto&quot;, sans-serif;
+    text-transform: uppercase;
+    outline: 0;
+    background: #2c3e50;
+    color: #FFFFFF;
+    width: 100%;
+    border: 0;
+    padding: 15px;
+    font-size: 14px;
+    -webkit-transition: all 0.3 ease;
+    transition: all 0.3 ease;
+    cursor: pointer;
+
+}
+QPushButton:hover
+{
+
+    background: #3498db;
+}</string>
+    </property>
+    <property name="text">
+     <string>quitter</string>
+    </property>
+   </widget>
    <zorder>label</zorder>
    <zorder>label_4</zorder>
    <zorder>pushButtonEmploye</zorder>
@@ -293,6 +328,7 @@ border-radius: 4px;
    <zorder>start_2</zorder>
    <zorder>horizontalSlider_2</zorder>
    <zorder>label_3</zorder>
+   <zorder>pushButtonquitter</zorder>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
